--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "~/*": ["src/*"],
     }
   }
 }
